fixed nav bar visibility

--- a/style.css
+++ b/style.css
@@ -146,8 +146,8 @@ h3 {
 
 .Navbar {
     position: fixed;
-    top: 20%;
-    left: 80%;
+    top: 43%;
+    left: 90%;
     width: 50px;
     z-index: 9999;
     list-style-type: none;
